--- a/Web.config
+++ b/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ChatJobsity-20191213100242.mdf;Initial Catalog=aspnet-ChatJobsity-20191213100242;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="db_chatjobsityEntities" connectionString="metadata=res://*/Model_Chat.csdl|res://*/Model_Chat.ssdl|res://*/Model_Chat.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\db_chatjobsity.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
