--- a/ChatJobsity.csproj
+++ b/ChatJobsity.csproj
@@ -174,6 +174,10 @@
     <Content Include="Account\ResetPasswordConfirmation.aspx" />
     <Content Include="Account\TwoFactorAuthenticationSignIn.aspx" />
     <Content Include="Account\VerifyPhoneNumber.aspx" />
+    <Content Include="App_Data\aspnet-ChatJobsity-20191213100242.mdf" />
+    <Content Include="App_Data\aspnet-ChatJobsity-20191213100242_log.ldf">
+      <DependentUpon>aspnet-ChatJobsity-20191213100242.mdf</DependentUpon>
+    </Content>
     <Content Include="App_Data\db_chatjobsity.mdf" />
     <Content Include="App_Data\db_chatjobsity_log.ldf">
       <DependentUpon>db_chatjobsity.mdf</DependentUpon>
@@ -204,6 +208,7 @@
     <Content Include="Model_Chat.edmx.diagram">
       <DependentUpon>Model_Chat.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\ChatJobsityPublish.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Model_Chat.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
